# cl_kg_stats

./: README.md  pyproject.toml  report.md
.github/workflows/: publish-to-clkg.yml
queries/: 01_totals.cypher  02_counts_by_label.cypher  03_avg_degree_by_label.cypher  04_relationship_types_count.cypher  05_top_tissues.cypher  06_top_diseases.cypher  07_assay_types.cypher  08_development_stages.cypher  09_provenance_summary.cypher  10_top_datasets_by_clusters.cypher  11_datasets_alphabetical.cypher  README.md
report_templates/: release_notes.md.j2
scripts/: generate_report.py
section_pages/: 01-01-global-totals.md  02-02-counts-by-key-label.md  03-average-degree-by-label.md  04-04-relationship-types-by-count.md  05-05-top-tissues-across-clusters.md  06-06-top-diseases-across-clusters.md  07-07-assay-types-across-clusters.md  08-08-development-stages-across-clusters.md  09-09-how-many-datasets-and-clusters-with-sources.md  10-10-top-datasets-by-clusters.md  11-list-all-dataset-titles-alphabetically-with-row-numbers.md  README.md
