[project]
name = "cl-kg-stats"
version = "0.1.0"
description = "Summary statistics reporting for CL_KG Neo4j knowledge graph"
package-mode = false
authors = [
    {name = "Ugur Bayindir",email = "ub2@sanger.ac.uk"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "neo4j (>=5.28.2,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.9"
pytest = "^8.4.1"

